_build/html/reports/valida.log
Traceback (most recent call last):
  File "C:\Users\lipel\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\lipel\anaconda3\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\lipel\anaconda3\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
\begin{table}[]
			\centering
			\caption{Comparação entre valores experimentais e calculados com diferentes funcionais para a célula primitiva do diamante.}
			\label{dados_diamante}
			\renewcommand{\arraystretch}{1.2}
			\fontfamily{lmss}\small\selectfont
			\begin{tabular}{l|ccccccc}
				\hline\hline
				& $a$ & $\rho$ & d(C-C) & \textbf{B} & E. Coeh. & \textit{Band Gap} & Freq. \\
				& (Å) & (cm$^3$/g) & (Å) & (GPa) & (eV/átomo) & (eV) & (cm$^{-1}$) \\ \hline
				Experimental & 3.567\textsuperscript{\cite{hom1975accurate}} & 3.523\textsuperscript{\cite{hom1975accurate}}     & 1.544\textsuperscript{\cite{hom1975accurate}}       & 442\textsuperscript{\cite{grimsditch1975brillouin}}     &  7.58\textsuperscript{\cite{greenwood2012chemistry}}     & 5.47\textsuperscript{\cite{greenwood2012chemistry}}     & 1332\textsuperscript{\cite{warren1967lattice}}         \\
				LDA          & 3.534 & 3.616     & 1.530        & 465.3   &  8.98     & 4.19     & 1321         \\
				LDA-D2       & 3.525 & 3.641     & 1.527        & 471.3   &  9.19     & 4.21     & 1337         \\
				GGA-PBE      & 3.571 & 3.504     & 1.546        & 432.9   &  7.65     & 4.18     & 1290         \\
				GGA-PBE-D2   & 3.562 & 3.529     & 1.543        & 440.8   &  7.86     & 4.19     & 1307         \\
				GGA-PBE-D3   & 3.565 & 3.521     & 1.544        & 435.3   &  7.74     & 4.19     & 1297         \\
				GGA-PBESol   & 3.555 & 3.552     & 1.539        & 449.7   &  8.32     & 4.08     & 1307         \\
				GGA-PBESol-D2& 3.547 & 3.576     & 1.536        & 449.7   &  8.45     & 4.10     & 1321         \\
				GGA-PBESol-D3& 3.552 & 3.562     & 1.538        & 451.1   &  8.30     & 4.09     & 1309         \\
				GGA-BLYP     & 3.599 & 3.422     & 1.559        & 402.0   &  6.58     & 4.46     & 1296         \\
				GGA-BLYP-D2  & 3.590 & 3.447     & 1.555        & 441.2   &  6.79     & 4.41     & 1276         \\
				GGA-BLYP-D3  & 3.588 & 3.454     & 1.554        & 409.4   &  6.75     & 4.41     & 1271         \\
				GGA-PW91     & 3.571 & 3.503     & 1.547        & 430.3   &  7.49     & 4.19     & 1289         \\
				GGA-PW91-D2  & 3.563 & 3.528     & 1.543        & 438.1   &  7.70     & 4.21     & 1306         \\
				B3LYP        & 3.567\textsuperscript{a} &           &              &         &           & 5.97     &              \\
				HSE          & 3.567\textsuperscript{a} &           &              &         &           & 5.39     &              \\ \hline\hline          
			\end{tabular}
		\textsuperscript{a}Foram utilizados os valores experimentais para o cálculo com funcionais híbridos. 
\end{table}
------------------

[1;36m  File [1;32m"<tokenize>"[1;36m, line [1;32m28[0m
[1;33m    \textsuperscript{a}Foram utilizados os valores experimentais para o cálculo com funcionais híbridos.[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m unindent does not match any outer indentation level

IndentationError: unindent does not match any outer indentation level (<tokenize>, line 28)

